--- a/src/components/newTodo/newtodo.module.css
+++ b/src/components/newTodo/newtodo.module.css
@@ -1,63 +1,70 @@
 .form {
-  width: 70%;
   background-color: #0a2136;
   color: #fff;
-  padding: 0.5rem;
-  border-radius: 0.6rem;
+  padding: 18px 28px;
+  border-radius: 4px;
   margin-bottom: 0.5rem;
 }
 
 .form-field {
   margin: 1rem 0;
   display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.8rem;
 }
 .form-field label {
   flex-basis: 20%;
 }
 
-.form-field input {
+.form-field input,
+textarea {
   flex-basis: 80%;
+  color: #8a98ae;
   border: none;
-  border-radius: 0.6rem;
-  padding: 0.2rem;
-  border: none;
+  border-radius: 4px;
+  padding: 18px 8px;
+  background-color: rgb(0, 48, 50);
+  font-size: 18px;
+  outline: none;
 }
-.form-field textarea {
-  flex-basis: 80%;
-  border: none;
-  border-radius: 0.6rem;
-  padding: 0.2rem;
+.form-field input:focus,
+textarea:focus {
+  background-color: rgb(0, 48, 50);
+  font-size: 18px;
 }
 
 .form button {
-  border: none;
-  border-radius: 0.6rem;
+  border-radius: 32px;
   cursor: pointer;
   display: block;
   margin: 0 auto;
+  width: 35%;
+  border: 2px solid #0284c7;
+  padding: 0.6em 1.2em;
+  font-size: 18px;
+  font-weight: 800;
+  font-family: inherit;
+  background-color: #0a2136;
+  cursor: pointer;
+  color: #8a98ae;
+  transition: 0.5s ease all;
+}
+
+.form button:hover {
+  background-color: #0284c7;
+
+  color: #fff;
 }
 
 .caption {
   font-size: 25px;
   font-weight: bold;
+  color: #8a98ae;
 }
 
 .desc {
   font-size: 25px;
   font-weight: bold;
-}
-
-.btn {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #38bdf8;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-.btn:hover {
-  border-color: #646cff;
+  color: #8a98ae;
 }
