--- a/src/components/todo/todo.module.css
+++ b/src/components/todo/todo.module.css
@@ -1,11 +1,16 @@
 .todo {
   background-color: #0b1120;
+  width: 8rem;
+  height: 8rem;
   margin: 0.5rem;
-  border-radius: 0.6rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  pad: 0.5rem;
+  border-radius: 4px;
+  display: grid;
+
+  padding: 0.5rem;
+}
+
+.btn {
+  margin-bottom: 7px;
 }
 
 .todo:hover {
